add BreadthFirstSearch, not tested